Create pages for Club and Race

--- a/RunGroopWebApp/Views/_ViewImports.cshtml
+++ b/RunGroopWebApp/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using RunGroopWebApp
 @using RunGroopWebApp.Models
+@using RunGroopWebApp.ViewModels
 @using RunGroopWebApp.Data.Enum
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
