--- a/RunGroopWebApp/Views/Club/Create.cshtml
+++ b/RunGroopWebApp/Views/Club/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Club
+﻿@model CreateClubViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -6,7 +6,7 @@
 }
 
 
-<form method="post" asp-action="Create"> @*encrypt-type="mulipart/form-data"*@
+<form method="post" asp-action="Create" enctype="multipart/form-data">
     <div class="mb-3">
         <label asp-for="Title" class="form-label">Title</label>
         <input asp-for="Title" class="form-control" >
