--- a/RunGroopWebApp/Views/Race/Create.cshtml
+++ b/RunGroopWebApp/Views/Race/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Race
+﻿@model CreateRaceViewModel
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
@@ -7,7 +7,7 @@
 }
 
 
-<form method="post" asp-controller="Race" asp-action="Create">
+<form method="post" asp-controller="Race" asp-action="Create" enctype="multipart/form-data">
     <div class="mb-3">
         <label asp-for="Title" class="form-label">Title</label>
         <input asp-for="Title" class="form-control">
@@ -17,11 +17,6 @@
         <label asp-for="Description" class="form-label">Description</label>
         <input asp-for="Description" class="form-control">
         <span asp-validation-for="Description" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Image" class="form-label">Image</label>
-        <input asp-for="Image" class="form-control">
-        <span asp-validation-for="Image" class="text-danger"></span>
     </div>
     <div class="mb-3">
         <label asp-for="RaceCategory" class="form-label">Race Category</label>
@@ -44,6 +39,11 @@
         <label asp-for="Address.Street" class="form-label">Street</label>
         <input asp-for="Address.Street" class="form-control">
         <span asp-validation-for="Address.Street" class="text-danger"></span>
+    </div>
+    <div class="mb-3">
+        <label asp-for="Image" class="form-label">Image</label>
+        <input asp-for="Image" type="file" class="form-control">
+        <span asp-validation-for="Image" class="text-danger"></span>
     </div>
 
 
